# AgentSymposium

./: README.md  pyproject.toml
src/: sample.py
src/symposium/: graph.py  tools.py
src/symposium/agents/: __init__.py  base_agent.py  operational_agent.py  python_syntax_agent.py
src/symposium/models/: base.py
src/symposium/systems/: operational.py  policy.py
src/symposium/vsm/: control.py  coordination.py  intelligence.py  operational.py
tests/: conftest.py  test_base_agent.py  test_helpers.py  test_models.py  test_python_syntax_agent.py
tests/vsm/: test_operational.py
